manifestBAK/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: react
spec:
  selector:
    app: react
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
