manifestBAK/cilium-manifest.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: nodeport-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: default
spec:
  gatewayClassName: example-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  hostnames:
    - kubernetes.manabpokhrel.com.np
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: python-service
          namespace: react
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: react-service
          namespace: react
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: default
spec:
  hostnames:
    - prometheus.manabpokhrel.com.np
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: kube-prometheus-stack
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: default
spec:
  hostnames:
    - grafana.manabpokhrel.com.np
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: kube-prometheus-stack
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana-route
  namespace: default
spec:
  hostnames:
    - kibana.manabpokhrel.com.np
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kibana-kibana
          namespace: default
          port: 5601
#Traffic Flow
#User
#↓
#GCP HTTPS Load Balancer :443
#↓
#Worker Node :30080
#(NodePort)
#↓
#Kubernetes Service (envoyService)
#port: 80
#↓
#targetPort: 10080
#↓
#Envoy Pod container listening on 10080
#↓
#Gateway API routes traffic
#↓
#Backend services/pods
